--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "http-proxy-middleware": "^0.17.3",
     "webpack-bundle-analyzer": "^2.2.1",
     "semver": "^5.3.0",
+    "sw-precache-webpack-plugin": "^0.9.1",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
